# modular

./: .gitignore  .gitmodules  .oxlintrc.json  .prettierignore  .rustfmt.ignore  .yarnrc.yml  AGENT_TESTING_RESEARCH.md  AUDIO_STREAMING_IMPLEMENTATION.md  CLAUDE.md  Cargo.toml  JSON_API.md  OSCILLOSCOPE.md  PATTERN_PARSER_SUMMARY.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  PLAITS_IMPLEMENTATION.md  README.md  REFRACTORING_PROPOSAL.md  TESTING.md  TODO.md  cargo.toml  clock-demo.mjs  config.json  demo.mjs  demo.sh  entitlements.plist  eslint.config.js  example.mjs  feedback.mjs  fm-synth.js  fm-synth.mjs  forge.config.ts  improve param smoothing.md  index.html  knip.json  oscilloscope.html  package-lock.json  package.json  package.jsonnnn  patch.json  patch.mjs  (+20 more)
crates/modular/: Cargo.toml  README.md  index.d.ts  index.js  package.json  schemas.json
crates/modular/.github/workflows/: CI.yml
crates/modular/__test__/: index.spec.ts  napi.test.ts
crates/modular/dsl/: package.json  tsconfig.json
crates/modular/dsl/src/: index.ts
crates/modular/scripts/: copy-host-binary-to-npm.mjs
crates/modular/src/: audio.rs  buffer.rs  commands.rs  graph_analysis.rs  lib.rs  link.rs  metrics.rs  midi.rs  params_cache.rs  validation.rs  wav_metadata.rs
crates/modular_cli/: Cargo.toml  README.md
crates/modular_cli/patches/: filter_sweep.json  full_mix.json  plaits_heavy.json  poly_stack.json  simple_sine.json
crates/modular_cli/src/: bench.rs  main.rs
crates/modular_core/: .gitignore  Cargo.toml
crates/modular_core/benches/: dsp_bench.rs
crates/modular_core/examples/: debug_issues.rs  show_default_output.rs
crates/modular_core/src/: block_port.rs  lib.rs  param_errors.rs  params.rs  patch.rs  pattern.pest  pattern.rs  poly.rs  signal_syntax.md  types.rs
crates/modular_core/src/codegen/: category.rs  factory_renderer.rs  metadata_renderer.rs  mod.rs  reserved_names_renderer.rs  type_resolver.rs  writer.rs
crates/modular_core/src/dsp/: consts.rs  mod.rs  test_overlap.rs  utils.rs
crates/modular_core/src/pattern_system/: ACKNOWLEDGMENTS.md  applicative.rs  combinators.rs  constructors.rs  euclidean.rs  fraction.rs  hap.rs  mod.rs  monadic.rs  operators.rs  random.rs  state.rs  strudel_compat.rs  temporal.rs  timespan.rs
crates/modular_core/tests/: block_outputs_tests.rs  codegen_type_resolver.rs  connect_inject_tests.rs  dsp_fresh_tests.rs  dsp_tests.rs  types_tests.rs
crates/modular_derive/: Cargo.toml
crates/modular_derive/src/: channel_count.rs  connect.rs  enum_tag.rs  lib.rs  message_handlers.rs  module_attr.rs  outputs.rs  signal_params.rs  utils.rs
modular_app/: Cargo.toml  package-lock.json  package.json  tauri.conf.json  tsconfig.app.json  tsconfig.node.json  vite.renderer.config.ts
modular_app/src/: App.tsx  lib.rs  main.rs  renderer.tsx
modular_app/src/components/: ErrorDisplay.tsx
modular_app/src/dsl/: executor.ts
modular_client/: Cargo.toml  package.json  tsconfig.json  watch.js  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
modular_client/examples/: filters.rs  http_declarative.rs  oscilloscope_test.rs  perf.rs  pulse_demo.rs  saw_demo.rs  sine.rs  sine_declarative.rs  watch_patch.rs
modular_client/src/: app.rs  app.tsx  client.rs  extra.ts  http_client.rs  index.ts  lib.rs  main.rs  main.ts  osc.rs  renderer.ts  renderer.tsx
modular_client/src/assets/: index.css
modular_client/src/components/: canvas.tsx  command.tsx
modular_client/src/ui/: box_constraints.rs  context.rs  edge_insets.rs  mod.rs  offset.rs  paint.rs  rect.rs  size.rs  widget.rs
modular_client/src/ui/components/: grid.rs  mod.rs  tile.rs
modular_client/src/ui/widgets/: align.rs  clip.rs  constrained_box.rs  container.rs  custom_paint.rs  flex.rs  mod.rs  padding.rs  painted_box.rs  sized_box.rs  stack.rs  text.rs  transformed_box.rs
modular_core/: Cargo.toml
modular_core/src/: lib.rs  message.rs  patch.rs  pattern.pest  pattern2.rs  pattern_parser.rs  procedure.rs  sequence.rs  types.rs
modular_core/src/dsp/: consts.rs  mod.rs  test_overlap.rs  utils.rs
modular_core/src/dsp/core/: mix.rs  mod.rs  pan.rs  scale_and_shift.rs  signal.rs  sum.rs
modular_core/src/dsp/filters/: allpass.rs  bandpass.rs  formant.rs  highpass.rs  lowpass.rs  (+8 more)
modular_core/tests/: dsp_tests.rs  pattern_parser_tests.rs  plaits_tests.rs  types_tests.rs
modular_derive/: Cargo.toml
modular_derive/examples/: abc.rs
modular_derive/src/: lib.rs
modular_node/: .gitattributes  Cargo.toml  package-lock.json  package.json
modular_server/: Cargo.toml  recording_1764841599.wav.asd
modular_server/src/: audio.rs  collab.rs  data.json  http_server.rs  json_api.rs  lib.rs  main.rs  osc.rs  persistence.rs  protocol.rs  server.rs  validation.rs
modular_server/static/: index.html
modular_server/static/assets/: index-BMh4jhG6.js  index-BW-LCFIU.css
modular_web/: Cargo.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
modular_web/client/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
modular_web/client/src/: app.tsx  index.html  index.tsx  preact.tsx
modular_web/src/: App.css  App.tsx  SchemaContext.tsx  client.rs  index.css  main.rs  main.tsx  osc.rs
modular_web/src/components/: AudioControls.tsx  ErrorDisplay.tsx  FileExplorer.css  FileExplorer.tsx  MonacoPatchEditor.tsx  Oscilloscope.tsx  PatchEditor.tsx
modular_web/src/dsl/: GraphBuilder.ts  autocomplete.ts  executor.ts  factories.ts  index.ts  typescriptLibGen.ts
modular_web/src/hooks/: useMonacoCollabAdapter.ts  useWebSocket.ts
modular_web/src/lsp/: tsClient.ts  tsCompletion.ts  tsDiagnostics.ts  tsHover.ts  tsWorker.ts
modular_web/src/types/: index.ts
modular_web/src/utils/: exhaustingSwitch.ts  findScopeCallEndLines.ts
native/modular_client_rs/: Cargo.toml
native/modular_client_rs/examples/: perf.rs  sine.rs
native/modular_client_rs/src/: lib.rs
native/modular_js/native/: Cargo.toml
native/modular_server/: Cargo.toml
native/modular_server/src/: lib.rs
tmp/: Cargo.toml  README.md  persistence.rs
(+525 files in other folders)
