[workspace]
resolver = "3"
members = [
    "crates/modular_core",
    "crates/modular_derive",
    "crates/mi-plaits-dsp-rs",
    "crates/modular",
    "crates/modular_cli",
]
default-members = [
    "crates/modular_core",
    "crates/modular_derive",
    "crates/modular",
    "crates/modular_cli",
]

# Profiling profile: optimized but with debug symbols for samply/Instruments/perf
[profile.profiling]
inherits = "release"
debug = true
lto = false
strip = false

# Release profile for N-API module
[profile.release]
lto = true
strip = "symbols"
