[package]
name = "modular_client"
version = "0.1.0"
authors = ["Dan Lewis <daniel.lewis.software.engineer@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.4"
modular_core = { version = "*", path = "../modular_core"}
modular_server = { version = "*", path = "../modular_server"}
rand = "0.8"