[package]
name = "modular_client"
version = "0.1.0"
authors = ["Dan Lewis <daniel.lewis.software.engineer@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.4"
modular_core = { version = "*", path = "../modular_core"}
modular_server = { version = "*", path = "../modular_server"}
rand = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
url = "2.5"
notify = "6.1"