[package]
name = "modular_core"
version = "0.1.0"
authors = ["helveticascenario"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.5"
uuid = { version = "1.11", features = ["v4", "serde"] }
keyframe = "1.1"
modular_derive = { version = "*", path = "../modular_derive" }
parking_lot = "0.12"
ts-rs = { version = "11", features = ["serde-compat"] }
mi-plaits-dsp = { version = "0.1", path = "../mi-plaits-dsp-rs" }
