
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "modular_node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
modular_core = { version = "*", path = "../modular_core" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
