[package]
name = "modular_server"
version = "0.1.0"
authors = ["Daniel Lewis <daniel.lewis.software.engineer@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.4"
clap = "4.5"
modular_core = { version = "*", path = "../modular_core"}

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
