[package]
name = "modular_web"
version = "0.1.0"
authors = ["Daniel Lewis <daniel.lewis.software.engineer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
modular_core = { version = "*", path = "../modular_core"}
modular_server = { version = "*", path = "../modular_server"}