[package]
name = "modular_server"
version = "0.1.0"
authors = ["Daniel Lewis <daniel.lewis.software.engineer@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.4"
clap = "4.5"
uuid = { version = "1.11", features = ["v4", "serde"] }
parking_lot = "0.12"
modular_core = { version = "*", path = "../modular_core"}

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"

# Audio
cpal = { version = "0.16", features = ["asio"] }
hound = "3.5"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"
