[package]
name = "modular_cli"
version = "0.1.0"
edition = "2024"
description = "CLI tools for modular synthesizer performance analysis"
license = "MIT"

[[bin]]
name = "modular-perf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
