[package]
name = "modular_cli"
version = "0.1.0"
edition = "2024"
description = "CLI tools for modular synthesizer performance analysis and benchmarking"
license = "MIT"

[[bin]]
name = "modular-perf"
path = "src/main.rs"

[[bin]]
name = "modular-bench"
path = "src/bench.rs"

[features]
default = []
profile = ["tracing-tracy", "tracing-subscriber"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
modular_core = { path = "../modular_core" }

# Profiling (optional)
tracing = "0.1"
tracing-tracy = { version = "0.11", optional = true }
tracing-subscriber = { version = "0.3", features = ["registry"], optional = true }
