[package]
name = "modular_core"
version = "0.1.0"
authors = ["helveticascenario"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.147"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.5"
uuid = { version = "1.11", features = ["v4", "serde"] }
keyframe = "1.1"
modular_derive = { version = "*", path = "../modular_derive" }
parking_lot = "0.12"
mi-plaits-dsp = { version = "0.1", path = "../mi-plaits-dsp-rs" }
schemars = "1.1.0"
simple-easing = "1.0.1"
napi-derive = "3.4.1"
pest = "2.8.0"
pest_derive = "2.8.0"
regex = "1.12.2"
fasteval = "0.2.4"
rust-music-theory = "0.3.0"
num = "0.4.3"
paste = "1.0"

[dependencies.napi]
version = "3.7.1"
features = ["serde", "serde-json"]
