[package]
name = "modular_client"
version = "0.1.0"
authors = ["Dan Lewis <daniel.lewis.software.engineer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
rosc = "~0.4"
ctrlc = "3.1.7"
modular_core = { version = "*", path = "../modular_core"}
modular_server = { version = "*", path = "../modular_server"}
